# TriageLens

./: .gitignore  README.md  app.py  pyproject.toml
fixtures/: candidate_claims.json  kb_samples.json  threshold_pairs_v2.json
results/: eval_report.txt  final_summary.md  predictions.jsonl  scorer_consistency.csv  threshold_calibration.csv
scripts/: annotate_variants.py  build_adversarials.py  build_index.py  build_test_set.py  calibrate_threshold.py  download_data.py  eval_harness.py  sample_kb_for_calibration.py  test_scorer_consistency.py
src/: assembler.py  claim_scorer.py  logger.py  rag_matcher.py  ui_styles.py
src/baselines/: keyword_baseline.py  zeroshot_baseline.py
test_set/: adversarials.jsonl  negatives_facts.jsonl  negatives_unfalsifiable.jsonl  positives.jsonl  test_set.jsonl
